--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
   pointer-events: none;
 }
 
+.notes {
+  display: flex;
+}
+
+.note {
+  margin: 10px;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
